try using circular curvature but it's messy at the trace ends

--- a/beaks-data-topostats-first-look.ipynb
+++ b/beaks-data-topostats-first-look.ipynb
@@ -161,6 +161,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "grains_with_beaks = [7, 13, 16, 26, 28, 30, 34, 36, 37, 38, 43, 45, 54, 55, 58, 65, 66, 71, 72, 79, 82, 89, 91, 92, 93]\n",
+    "\n",
+    "grains_with_beaks_dictionary = {}\n",
+    "\n",
+    "for grain_index in grains_with_beaks:\n",
+    "    grains_with_beaks_dictionary[grain_index] = grains_dictionary[grain_index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def resample_points_regular_interval(points: npt.NDArray, interval: float):\n",
     "    \"\"\"Resample a set of points to be at regular intervals\"\"\"\n",
     "\n",
@@ -191,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for grain_index, grain_data in grains_dictionary.items():\n",
+    "for grain_index, grain_data in grains_with_beaks_dictionary.items():\n",
     "    print(f\"grain {grain_index}\")\n",
     "\n",
     "    full_image = grain_data[\"full_image\"]\n",
@@ -203,17 +217,24 @@
     "    bbox_added_left = grain_data[\"added_left\"]\n",
     "    bbox_added_top = grain_data[\"added_top\"]\n",
     "\n",
-    "    plt.imshow(full_image)\n",
-    "    plt.show()\n",
+    "    # plt.imshow(full_image)\n",
+    "    # plt.show()\n",
     "\n",
     "    # ignore erroneously small splines\n",
     "    min_splined_coords_num_points = 10\n",
     "\n",
     "    for molecule_index, molecule_data in grain_data[\"molecule_data\"].items():\n",
     "        splined_coords_px = molecule_data[\"spline_coords\"]\n",
-    "        splined_coords_px[:, 0] -= bbox_added_top\n",
-    "        splined_coords_px[:, 1] -= bbox_added_left\n",
-    "        splined_coords_nm = splined_coords_px * p2nm\n",
+    "        splined_coords_px_accurate_positions = splined_coords_px.copy()\n",
+    "        splined_coords_px_accurate_positions[:, 0] -= bbox_added_top\n",
+    "        splined_coords_px_accurate_positions[:, 1] -= bbox_added_left\n",
+    "        splined_coords_nm = splined_coords_px_accurate_positions * p2nm\n",
+    "\n",
+    "        # plot splined coords px\n",
+    "        # plt.imshow(image)\n",
+    "        # plt.plot(splined_coords_px_accurate_positions[:, 1], splined_coords_px_accurate_positions[:, 0], \"r\")\n",
+    "        # plt.title(f\"grain {grain_index} molecule {molecule_index} bbox: {bbox} padding: {bbox_padding}\")\n",
+    "        # plt.show()\n",
     "\n",
     "        if len(splined_coords_nm) < min_splined_coords_num_points:\n",
     "            print(\n",
@@ -224,13 +245,24 @@
     "        # resample the spline to get points at fixed intervals\n",
     "        interval_nm = 5.0\n",
     "        resampled_points = resample_points_regular_interval(points=splined_coords_nm, interval=interval_nm)\n",
-    "        resampled_curvatures = discrete_angle_difference_per_nm_linear(resampled_points)\n",
+    "\n",
+    "        # jank metric to determine if circular molecule\n",
+    "        # if the start and and points are within n nm of each other, then it is circular\n",
+    "        circular_molecule_distance_threshold_nm = 10.0\n",
+    "        start_point = resampled_points[0]\n",
+    "        end_point = resampled_points[-1]\n",
+    "        distance_between_start_and_end = np.linalg.norm(start_point - end_point)\n",
+    "        is_circular = distance_between_start_and_end < circular_molecule_distance_threshold_nm\n",
+    "        if is_circular:\n",
+    "            resampled_curvatures = discrete_angle_difference_per_nm_circular(resampled_points)\n",
+    "        else:\n",
+    "            resampled_curvatures = discrete_angle_difference_per_nm_linear(resampled_points)\n",
     "        # threshold the curvature to find defects\n",
-    "        curvature_threshold = 0.30\n",
+    "        curvature_threshold = 0.25\n",
     "        curvature_defects = np.where(np.abs(resampled_curvatures) > curvature_threshold)[0]\n",
     "\n",
     "        # plot the molecule\n",
-    "        fig, ax = plt.subplots(figsize=(10, 10))\n",
+    "        fig, ax = plt.subplots(figsize=(5, 5))\n",
     "        plt.imshow(image)\n",
     "        # change the coordinates of the plot to be in nanometers using the pixel to nm scaling ratio\n",
     "        for resampled_point_index, resampled_point in enumerate(resampled_points):\n",
@@ -247,7 +279,7 @@
     "            )\n",
     "\n",
     "        for defect_index in curvature_defects:\n",
-    "            resampled_point = resampled_points[defect_index] / p2nm\n",
+    "            resampled_point = resampled_points[defect_index]\n",
     "            plt.plot(\n",
     "                resampled_point[1],\n",
     "                resampled_point[0],\n",
@@ -257,7 +289,9 @@
     "            )\n",
     "\n",
     "        plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
-    "        plt.title(f\"grain {grain_index} molecule {molecule_index} bbox: {bbox} padding: {bbox_padding}\")\n",
+    "        plt.title(\n",
+    "            f\"grain {grain_index} molecule {molecule_index} bbox: {bbox} padding: {bbox_padding} circular: {is_circular}\"\n",
+    "        )\n",
     "        plt.show()\n",
     "\n",
     "        # plot curvatures\n",
@@ -266,10 +300,7 @@
     "        plt.legend()\n",
     "        plt.ylim(-0.1, 0.5)\n",
     "        plt.title(f\"grain {grain_index} molecule {molecule_index} curvatures\")\n",
-    "        plt.show()\n",
-    "\n",
-    "    if grain_index > 20:\n",
-    "        break"
+    "        plt.show()"
    ]
   },
   {
