exploring possible beaks and getting tangent vectors

--- a/beaks-data-topostats-first-look.ipynb
+++ b/beaks-data-topostats-first-look.ipynb
@@ -194,6 +194,10 @@
     "        new_interpolated_point = interpolate_between_two_points(current_point, next_original_point, interval)\n",
     "        resampled_points.append(new_interpolated_point)\n",
     "\n",
+    "    # if the first and last points are less than 0.5 * the interval apart, then remove the last point\n",
+    "    if np.linalg.norm(resampled_points[0] - resampled_points[-1]) < 0.5 * interval:\n",
+    "        resampled_points = resampled_points[:-1]\n",
+    "\n",
     "    resampled_points = np.array(resampled_points)\n",
     "\n",
     "    return resampled_points"
@@ -210,7 +214,9 @@
     "\n",
     "    full_image = grain_data[\"full_image\"]\n",
     "    image = grain_data[\"image\"]\n",
-    "    mask = grain_data[\"mask\"]\n",
+    "    mask = grain_data[\"mask\"][:, :, 0]\n",
+    "    mask_thick_threshold = 2.0\n",
+    "    mask_thick = image > 2.0\n",
     "    bbox = grain_data[\"bbox\"]\n",
     "    p2nm = grain_data[\"pixel_to_nm_scaling\"]\n",
     "    bbox_padding = grain_data[\"padding\"]\n",
@@ -244,19 +250,20 @@
     "\n",
     "        # resample the spline to get points at fixed intervals\n",
     "        interval_nm = 5.0\n",
-    "        resampled_points = resample_points_regular_interval(points=splined_coords_nm, interval=interval_nm)\n",
+    "        resampled_points_nm = resample_points_regular_interval(points=splined_coords_nm, interval=interval_nm)\n",
+    "        resampled_points_px = resampled_points_nm / p2nm\n",
     "\n",
-    "        # jank metric to determine if circular molecule\n",
-    "        # if the start and and points are within n nm of each other, then it is circular\n",
-    "        circular_molecule_distance_threshold_nm = 10.0\n",
-    "        start_point = resampled_points[0]\n",
-    "        end_point = resampled_points[-1]\n",
-    "        distance_between_start_and_end = np.linalg.norm(start_point - end_point)\n",
-    "        is_circular = distance_between_start_and_end < circular_molecule_distance_threshold_nm\n",
-    "        if is_circular:\n",
-    "            resampled_curvatures = discrete_angle_difference_per_nm_circular(resampled_points)\n",
+    "        # determine if circular\n",
+    "        circular_endpoint_distance_threshold = 2.0 * interval_nm\n",
+    "        if np.linalg.norm(resampled_points_nm[0] - resampled_points_nm[-1]) < circular_endpoint_distance_threshold:\n",
+    "            is_circular = True\n",
     "        else:\n",
-    "            resampled_curvatures = discrete_angle_difference_per_nm_linear(resampled_points)\n",
+    "            is_circular = False\n",
+    "\n",
+    "        if is_circular:\n",
+    "            resampled_curvatures = discrete_angle_difference_per_nm_circular(resampled_points_nm)\n",
+    "        else:\n",
+    "            resampled_curvatures = discrete_angle_difference_per_nm_linear(resampled_points_nm)\n",
     "        # threshold the curvature to find defects\n",
     "        curvature_threshold = 0.25\n",
     "        curvature_defects = np.where(np.abs(resampled_curvatures) > curvature_threshold)[0]\n",
@@ -264,9 +271,10 @@
     "        # plot the molecule\n",
     "        fig, ax = plt.subplots(figsize=(5, 5))\n",
     "        plt.imshow(image)\n",
+    "        plt.imshow(mask_thick, alpha=0.5)\n",
+    "        plt.plot(resampled_points_px[:, 1], resampled_points_px[:, 0], \"r\")\n",
     "        # change the coordinates of the plot to be in nanometers using the pixel to nm scaling ratio\n",
-    "        for resampled_point_index, resampled_point in enumerate(resampled_points):\n",
-    "            resampled_point /= p2nm\n",
+    "        for resampled_point_index, resampled_point in enumerate(resampled_points_px):\n",
     "            curvature = resampled_curvatures[resampled_point_index]\n",
     "            # colour the curvature to be between 0.5 and -0.5\n",
     "            colour = (curvature + 0.5) / 1\n",
@@ -279,7 +287,7 @@
     "            )\n",
     "\n",
     "        for defect_index in curvature_defects:\n",
-    "            resampled_point = resampled_points[defect_index]\n",
+    "            resampled_point = resampled_points_px[defect_index]\n",
     "            plt.plot(\n",
     "                resampled_point[1],\n",
     "                resampled_point[0],\n",
@@ -287,6 +295,89 @@
     "                c=\"r\",\n",
     "                markersize=10,\n",
     "            )\n",
+    "\n",
+    "        # find beaks at regions of moderate curvature\n",
+    "        possible_beak_curvature_threshold = 0.2\n",
+    "        slight_curvature_defects = np.where(np.abs(resampled_curvatures) > possible_beak_curvature_threshold)[0]\n",
+    "        # at these regions, explore the mask to see if there is a beak\n",
+    "        for slight_defect_index in slight_curvature_defects:\n",
+    "            slight_defect_point = resampled_points_px[slight_defect_index]\n",
+    "            # get the mask value at this point\n",
+    "            mask_value = mask[int(slight_defect_point[0]), int(slight_defect_point[1])]\n",
+    "            # mark this point with a blue hollow circle\n",
+    "            plt.plot(slight_defect_point[1], slight_defect_point[0], \"o\", c=\"b\", markersize=10, alpha=0.5)\n",
+    "\n",
+    "            slight_defect_explore_range_points = 3\n",
+    "            # check if the explore range will be in bounds, also remember that the neighbouring points are checked hence the +1 -1\n",
+    "            if slight_defect_index - slight_defect_explore_range_points - 1 < 0:\n",
+    "                if not is_circular:\n",
+    "                    print(\n",
+    "                        f\"slight defect index {slight_defect_index} - {slight_defect_explore_range_points + 1} < 0 in a noncircular trace, skipping\"\n",
+    "                    )\n",
+    "                    continue\n",
+    "            if slight_defect_index + slight_defect_explore_range_points + 1 >= len(resampled_points_px):\n",
+    "                if not is_circular:\n",
+    "                    print(\n",
+    "                        f\"slight defect index {slight_defect_index} + {slight_defect_explore_range_points + 1} >= {len(resampled_points_px)} in a noncircular trace, skipping\"\n",
+    "                    )\n",
+    "                    continue\n",
+    "\n",
+    "            # start at a point 3 points before and iterate to 3 points after\n",
+    "            for relative_index in range(-3, 4):\n",
+    "                current_point_index = slight_defect_index + relative_index\n",
+    "                # check if the indexes are in bounds and map them if not. if they aren't, they're guaranteed\n",
+    "                if current_point_index < 0:\n",
+    "                    current_point_index += len(resampled_points_px)\n",
+    "                if current_point_index >= len(resampled_points_px):\n",
+    "                    current_point_index -= len(resampled_points_px)\n",
+    "                previous_point_index = current_point_index - 1\n",
+    "                if previous_point_index < 0:\n",
+    "                    previous_point_index += len(resampled_points_px)\n",
+    "                if previous_point_index >= len(resampled_points_px):\n",
+    "                    previous_point_index -= len(resampled_points_px)\n",
+    "                next_point_index = current_point_index + 1\n",
+    "                if next_point_index < 0:\n",
+    "                    next_point_index += len(resampled_points_px)\n",
+    "                if next_point_index >= len(resampled_points_px):\n",
+    "                    next_point_index -= len(resampled_points_px)\n",
+    "\n",
+    "                # grab points\n",
+    "                previous_point = resampled_points_px[previous_point_index]\n",
+    "                current_point = resampled_points_px[current_point_index]\n",
+    "                next_point = resampled_points_px[next_point_index]\n",
+    "                vector_to_previous_point = previous_point - current_point\n",
+    "                vector_to_previous_point /= np.linalg.norm(vector_to_previous_point)\n",
+    "                vector_to_next_point = next_point - current_point\n",
+    "                vector_to_next_point /= np.linalg.norm(vector_to_next_point)\n",
+    "\n",
+    "                # calculate vector half way between the two\n",
+    "                average_vector = (vector_to_previous_point + vector_to_next_point) / 2\n",
+    "                average_vector /= np.linalg.norm(average_vector)\n",
+    "\n",
+    "                # flip it the other way to face away from the turn\n",
+    "                flipped_average_vector = -average_vector\n",
+    "\n",
+    "\n",
+    "\n",
+    "                # # travel along the orthogonal vector, seeing if we are still in the mask\n",
+    "                # orthogonal_vector_step_delta = 0.2 # pixels\n",
+    "                # current_orthogonal_point = current_point\n",
+    "                # # follow the orthogonal vector until the current pixel is not in the mask\n",
+    "                # while True:\n",
+    "                #     current_orthogonal_point += orthogonal_vector * orthogonal_vector_step_delta\n",
+    "                #     current_orthogonal_point_integer = current_orthogonal_point.astype(int)\n",
+    "                #     if mask[current_orthogonal_point_integer[0], current_orthogonal_point_integer[1]] == 0:\n",
+    "                #         break\n",
+    "\n",
+    "                # plot where the vector ends\n",
+    "\n",
+    "                # draw the orthogonal vector\n",
+    "                plt.plot(\n",
+    "                    [current_point[1], current_point[1] + flipped_average_vector[1] * 10],\n",
+    "                    [current_point[0], current_point[0] + flipped_average_vector[0] * 10],\n",
+    "                    \"g\",\n",
+    "                    alpha=0.5,\n",
+    "                )\n",
     "\n",
     "        plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
     "        plt.title(\n",
