interpolate points at possible beak regions

--- a/beaks-data-topostats-first-look.ipynb
+++ b/beaks-data-topostats-first-look.ipynb
@@ -16,6 +16,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import numpy.typing as npt\n",
+    "from scipy.interpolate import interp1d\n",
     "\n",
     "from topostats.io import LoadScans\n",
     "from topostats.unet_masking import make_bounding_box_square, pad_bounding_box\n",
@@ -298,6 +299,7 @@
     "\n",
     "        # find beaks at regions of moderate curvature\n",
     "        possible_beak_curvature_threshold = 0.2\n",
+    "        possible_beak_points_interpolation_number = 20\n",
     "        slight_curvature_defects = np.where(np.abs(resampled_curvatures) > possible_beak_curvature_threshold)[0]\n",
     "        # at these regions, explore the mask to see if there is a beak\n",
     "        for slight_defect_index in slight_curvature_defects:\n",
@@ -322,62 +324,108 @@
     "                    )\n",
     "                    continue\n",
     "\n",
-    "            # start at a point 3 points before and iterate to 3 points after\n",
-    "            for relative_index in range(-3, 4):\n",
+    "            print(f\"slight defect index: {slight_defect_index}\")\n",
+    "\n",
+    "            # grab the points\n",
+    "            possible_beak_points = []\n",
+    "            for relative_index in range(-slight_defect_explore_range_points, slight_defect_explore_range_points + 1):\n",
     "                current_point_index = slight_defect_index + relative_index\n",
     "                # check if the indexes are in bounds and map them if not. if they aren't, they're guaranteed\n",
     "                if current_point_index < 0:\n",
     "                    current_point_index += len(resampled_points_px)\n",
     "                if current_point_index >= len(resampled_points_px):\n",
     "                    current_point_index -= len(resampled_points_px)\n",
-    "                previous_point_index = current_point_index - 1\n",
-    "                if previous_point_index < 0:\n",
-    "                    previous_point_index += len(resampled_points_px)\n",
-    "                if previous_point_index >= len(resampled_points_px):\n",
-    "                    previous_point_index -= len(resampled_points_px)\n",
-    "                next_point_index = current_point_index + 1\n",
-    "                if next_point_index < 0:\n",
-    "                    next_point_index += len(resampled_points_px)\n",
-    "                if next_point_index >= len(resampled_points_px):\n",
-    "                    next_point_index -= len(resampled_points_px)\n",
+    "                possible_beak_points.append(resampled_points_px[current_point_index])\n",
+    "            possible_beak_points = np.array(possible_beak_points)\n",
     "\n",
-    "                # grab points\n",
-    "                previous_point = resampled_points_px[previous_point_index]\n",
-    "                current_point = resampled_points_px[current_point_index]\n",
-    "                next_point = resampled_points_px[next_point_index]\n",
-    "                vector_to_previous_point = previous_point - current_point\n",
-    "                vector_to_previous_point /= np.linalg.norm(vector_to_previous_point)\n",
-    "                vector_to_next_point = next_point - current_point\n",
-    "                vector_to_next_point /= np.linalg.norm(vector_to_next_point)\n",
+    "            # interpolate the possible beak points\n",
+    "            # Linear length along the line:\n",
+    "            distance = np.cumsum(np.sqrt(np.sum(np.diff(possible_beak_points, axis=0) ** 2, axis=1)))\n",
+    "            # Prepend the initial distance of 0\n",
+    "            distance = np.insert(distance, 0, 0) / distance[-1]\n",
+    "            # s parameter points\n",
+    "            alpha = np.linspace(0, 1, possible_beak_points_interpolation_number)\n",
+    "            interpolator = interp1d(distance, possible_beak_points, kind=\"cubic\", axis=0)\n",
+    "            interpolated_possible_beak_points = interpolator(alpha)\n",
     "\n",
-    "                # calculate vector half way between the two\n",
-    "                average_vector = (vector_to_previous_point + vector_to_next_point) / 2\n",
-    "                average_vector /= np.linalg.norm(average_vector)\n",
+    "            plt.plot(interpolated_possible_beak_points[:, 1], interpolated_possible_beak_points[:, 0], \"cyan\")\n",
     "\n",
-    "                # flip it the other way to face away from the turn\n",
-    "                flipped_average_vector = -average_vector\n",
+    "            for point_index, point in enumerate(interpolated_possible_beak_points):\n",
+    "                if point_index == 0:\n",
+    "                    continue\n",
+    "                elif point_index == len(interpolated_possible_beak_points) - 1:\n",
+    "                    continue\n",
+    "                else:\n",
+    "                    previous_point = interpolated_possible_beak_points[point_index - 1]\n",
+    "                    next_point = interpolated_possible_beak_points[point_index + 1]\n",
+    "                    vector_to_previous_point = previous_point - point\n",
+    "                    vector_to_previous_point /= np.linalg.norm(vector_to_previous_point)\n",
+    "                    vector_to_next_point = next_point - point\n",
+    "                    vector_to_next_point /= np.linalg.norm(vector_to_next_point)\n",
+    "                    average_vector = (vector_to_previous_point + vector_to_next_point) / 2\n",
+    "                    average_vector /= np.linalg.norm(average_vector)\n",
+    "                    flipped_average_vector = -average_vector\n",
+    "                    plt.plot(\n",
+    "                        [point[1], point[1] + flipped_average_vector[1] * 10],\n",
+    "                        [point[0], point[0] + flipped_average_vector[0] * 10],\n",
+    "                        \"g\",\n",
+    "                        alpha=0.5,\n",
+    "                    )\n",
     "\n",
+    "            # # start at a point 3 points before and iterate to 3 points after\n",
+    "            # for relative_index in range(-3, 4):\n",
+    "            #     current_point_index = slight_defect_index + relative_index\n",
+    "            #     # check if the indexes are in bounds and map them if not. if they aren't, they're guaranteed\n",
+    "            #     if current_point_index < 0:\n",
+    "            #         current_point_index += len(resampled_points_px)\n",
+    "            #     if current_point_index >= len(resampled_points_px):\n",
+    "            #         current_point_index -= len(resampled_points_px)\n",
+    "            #     previous_point_index = current_point_index - 1\n",
+    "            #     if previous_point_index < 0:\n",
+    "            #         previous_point_index += len(resampled_points_px)\n",
+    "            #     if previous_point_index >= len(resampled_points_px):\n",
+    "            #         previous_point_index -= len(resampled_points_px)\n",
+    "            #     next_point_index = current_point_index + 1\n",
+    "            #     if next_point_index < 0:\n",
+    "            #         next_point_index += len(resampled_points_px)\n",
+    "            #     if next_point_index >= len(resampled_points_px):\n",
+    "            #         next_point_index -= len(resampled_points_px)\n",
     "\n",
+    "            #     # grab points\n",
+    "            #     previous_point = resampled_points_px[previous_point_index]\n",
+    "            #     current_point = resampled_points_px[current_point_index]\n",
+    "            #     next_point = resampled_points_px[next_point_index]\n",
+    "            #     vector_to_previous_point = previous_point - current_point\n",
+    "            #     vector_to_previous_point /= np.linalg.norm(vector_to_previous_point)\n",
+    "            #     vector_to_next_point = next_point - current_point\n",
+    "            #     vector_to_next_point /= np.linalg.norm(vector_to_next_point)\n",
     "\n",
-    "                # # travel along the orthogonal vector, seeing if we are still in the mask\n",
-    "                # orthogonal_vector_step_delta = 0.2 # pixels\n",
-    "                # current_orthogonal_point = current_point\n",
-    "                # # follow the orthogonal vector until the current pixel is not in the mask\n",
-    "                # while True:\n",
-    "                #     current_orthogonal_point += orthogonal_vector * orthogonal_vector_step_delta\n",
-    "                #     current_orthogonal_point_integer = current_orthogonal_point.astype(int)\n",
-    "                #     if mask[current_orthogonal_point_integer[0], current_orthogonal_point_integer[1]] == 0:\n",
-    "                #         break\n",
+    "            #     # calculate vector half way between the two\n",
+    "            #     average_vector = (vector_to_previous_point + vector_to_next_point) / 2\n",
+    "            #     average_vector /= np.linalg.norm(average_vector)\n",
     "\n",
-    "                # plot where the vector ends\n",
+    "            #     # flip it the other way to face away from the turn\n",
+    "            #     flipped_average_vector = -average_vector\n",
     "\n",
-    "                # draw the orthogonal vector\n",
-    "                plt.plot(\n",
-    "                    [current_point[1], current_point[1] + flipped_average_vector[1] * 10],\n",
-    "                    [current_point[0], current_point[0] + flipped_average_vector[0] * 10],\n",
-    "                    \"g\",\n",
-    "                    alpha=0.5,\n",
-    "                )\n",
+    "            #     # # travel along the orthogonal vector, seeing if we are still in the mask\n",
+    "            #     # orthogonal_vector_step_delta = 0.2 # pixels\n",
+    "            #     # current_orthogonal_point = current_point\n",
+    "            #     # # follow the orthogonal vector until the current pixel is not in the mask\n",
+    "            #     # while True:\n",
+    "            #     #     current_orthogonal_point += orthogonal_vector * orthogonal_vector_step_delta\n",
+    "            #     #     current_orthogonal_point_integer = current_orthogonal_point.astype(int)\n",
+    "            #     #     if mask[current_orthogonal_point_integer[0], current_orthogonal_point_integer[1]] == 0:\n",
+    "            #     #         break\n",
+    "\n",
+    "            #     # plot where the vector ends\n",
+    "\n",
+    "            #     # draw the orthogonal vector\n",
+    "            #     plt.plot(\n",
+    "            #         [current_point[1], current_point[1] + flipped_average_vector[1] * 10],\n",
+    "            #         [current_point[0], current_point[0] + flipped_average_vector[0] * 10],\n",
+    "            #         \"g\",\n",
+    "            #         alpha=0.5,\n",
+    "            #     )\n",
     "\n",
     "        plt.gca().set_aspect(\"equal\", adjustable=\"box\")\n",
     "        plt.title(\n",
@@ -392,6 +440,49 @@
     "        plt.ylim(-0.1, 0.5)\n",
     "        plt.title(f\"grain {grain_index} molecule {molecule_index} curvatures\")\n",
     "        plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.interpolate import interp1d\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Define some points:\n",
+    "points = np.array([[0, 1, 8, 2, 2], [1, 0, 6, 7, 2]]).T  # a (nbre_points x nbre_dim) array\n",
+    "print(points.shape)\n",
+    "\n",
+    "# because interpolating in 2d, need to interpolate with respect to the distance parameter, s, not x or y.\n",
+    "# so need to calculate the distance along the line\n",
+    "\n",
+    "# Linear length along the line:\n",
+    "distance = np.cumsum(np.sqrt(np.sum(np.diff(points, axis=0) ** 2, axis=1)))\n",
+    "# Prepend the initial distance of 0\n",
+    "distance = np.insert(distance, 0, 0) / distance[-1]\n",
+    "\n",
+    "# Interpolation for different methods:\n",
+    "interpolations_methods = [\"slinear\", \"quadratic\", \"cubic\"]\n",
+    "alpha = np.linspace(0, 1, 10)\n",
+    "\n",
+    "interpolated_points = {}\n",
+    "for method in interpolations_methods:\n",
+    "    interpolator = interp1d(distance, points, kind=method, axis=0)\n",
+    "    interpolated_points[method] = interpolator(alpha)\n",
+    "\n",
+    "# Graph:\n",
+    "plt.figure(figsize=(7, 7))\n",
+    "for method_name, curve in interpolated_points.items():\n",
+    "    plt.plot(*curve.T, \"-\", label=method_name)\n",
+    "\n",
+    "plt.plot(*points.T, \"ok\", label=\"original points\")\n",
+    "plt.axis(\"equal\")\n",
+    "plt.legend()\n",
+    "plt.xlabel(\"x\")\n",
+    "plt.ylabel(\"y\")"
    ]
   },
   {
